# formal-languages-practice

./: CMakeLists.txt  README.md  main.cpp  singlefile.cpp  test.cpp
prac1/: main.cpp
prac1/regexp/: regexp_impl.cpp
prac1/regexp/expressions/: concatenation.cpp  expression.cpp  kleene_star.h
prac1/regexp/include/regexp/: regexp.h
prac2/: README.md  lr.py  lr_to_latex.py  main.py  tex.py
prac2/samples/: sample1.tex  sample2.tex
regexp/: regexp_impl.cpp  regexp_impl.h
regexp/expression/: alternation.cpp  alternation.h  concatenation.cpp  concatenation.h  empty.cpp  empty.h  expression.cpp  expression.h  kleeneStar.cpp  kleeneStar.h  letter.cpp  letter.h
regexp/expressions/: alternation.cpp  alternation.h  concatenation.cpp  concatenation.h  empty.cpp  empty.h  expression.cpp  expression.h  kleene_star.cpp  kleene_star.h  letter.cpp  letter.h
regexp/include/regexp/: regexp.h
